--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -58,7 +58,7 @@
 
     <nz-layout>
         <nz-content class="container">
-                <h2 style="margin-top: 100px;">Find Github UsersS</h2>
+                <h2 style="margin-top: 100px;">Find Github Users</h2>
 
                 <table class="table table-striped tabl" *ngIf="collection.length > 0">
                     <thead>
